--- a/frontend/main/templates/lista_poemas.html
+++ b/frontend/main/templates/lista_poemas.html
@@ -10,7 +10,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
 		<div class="container">
-		  <a class="navbar-brand text-dark" href="main.html">APP POEMAS</a>
+		  <a class="navbar-brand text-dark" href="vista_principal.html">APP POEMAS</a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		  </button>
@@ -19,7 +19,7 @@
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
 			<div class="row">
 				<div class="col-md-15">
-					<a class="btn btn-primary" href="login.html">Login</a>
+					
 				</div>
 			</div>
 		  </div>
