--- a/frontend/main/templates/register.html
+++ b/frontend/main/templates/register.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>usuario registro</title>
+    <title>Registrarse</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -14,7 +14,7 @@
     <body class="bg-info">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a href="" class="navbar-brand">APP POEMAS</a>
+        <a href="vista_principal.html" class="navbar-brand">APP POEMAS</a>
         <i class="fa-solid fa-book"></i>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -25,31 +25,10 @@
               <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <i class="fas fa-user-circle contrast fs-2 me-3"></i>
               </a>
-              <ul class="dropdown-menu my-3" aria-labelledby="navbarDropdown">
-                <li>
-
-                    <a class="dropdown-item d-grid" href="#">
-                        <div class="btn btn-info">Editar perfil</div>
-                    </a>
-
-
-                  </li>
-                <li>
-                    <a class="dropdown-item d-grid" href="#">
-                      <div class="btn btn-warning">Configuracion</div>
-                    </a>
-                  </li>
-                <li><hr class="dropdown-divider"></li>
-                <li>
-                    <a class="dropdown-item d-grid" href="#">
-                      <div class="btn btn-danger">Cerrar sesion</div>
-                    </a>
-                  </li>
-              </ul>
-            </li>
+              
             
             <li class="nav-item">
-              <a class="nav-link" href="#">Poeta@gmail.com</a>
+              <a class="nav-link" href="login.html">login</a>
             </li>
             <li class="nav-item">
           </ul>
