--- a/frontend/main/templates/vista_detallada.html
+++ b/frontend/main/templates/vista_detallada.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <i class="bi bi-journal-arrow-up"></i>
-        <a href="" class="navbar-brand">Poems</a>
+        <a href="vista_principal.html" class="navbar-brand">APP POEMAS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -23,33 +23,15 @@
               <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <i class="fas fa-user-circle contrast fs-2 me-3"></i>
               </a>
-              <ul class="dropdown-menu my-3" aria-labelledby="navbarDropdown">
-                <li>
-
-                    <a class="dropdown-item d-grid" href="#">
-                        <div class="btn btn-info">Editar perfil</div>
-                    </a>
-
-
-                  </li>
-                <li>
-                    <a class="dropdown-item d-grid" href="#">
-                      <div class="btn btn-warning">Configuracion</div>
-                    </a>
-                  </li>
-                <li><hr class="dropdown-divider"></li>
-                <li>
-                    <a class="dropdown-item d-grid" href="#">
-                      <div class="btn btn-danger">Cerrar sesion</div>
-                    </a>
-                  </li>
-              </ul>
-            </li>
+            
             
             <li class="nav-item">
-              <a class="nav-link" href="#">Usuario@mail.com</a>
+              <a class="nav-link" href="login.html">login</a>
+              
+
             </li>
             <li class="nav-item">
+              
           </ul>
         </div>
       </div>
