--- a/frontend/main/templates/vista_principal.html
+++ b/frontend/main/templates/vista_principal.html
@@ -25,33 +25,18 @@
               <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <i class="fas fa-user-circle contrast fs-2 me-3"></i>
               </a>
-              <ul class="dropdown-menu my-3" aria-labelledby="navbarDropdown">
-                <li>
-
-                    <a class="dropdown-item d-grid" href="#">
-                        <div class="btn btn-info">Editar perfil</div>
-                    </a>
-
-
-                  </li>
-                <li>
-                    <a class="dropdown-item d-grid" href="#">
-                      <div class="btn btn-warning">Configuracion</div>
-                    </a>
-                  </li>
-                <li><hr class="dropdown-divider"></li>
-                <li>
-                    <a class="dropdown-item d-grid" href="#">
-                      <div class="btn btn-danger">Cerrar sesion</div>
-                    </a>
-                  </li>
-              </ul>
-            </li>
+            
             
             <li class="nav-item">
-              <a class="nav-link" href="#">Usuario@mail.com</a>
+              <a class="nav-link" href="login.html">login</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="mi_perfil.html">Mi perfil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="lista_poemas.html">Ver mas</a>
+            </li>
+
           </ul>
         </div>
       </div>
@@ -73,7 +58,7 @@
               <h5 class="card-title">Poema:</h5>
               <h5 class="card-title">Promedio:</h5>
               <h5 class="card-title">Puntaje:</h5>
-              <a href="#" class="btn btn-primary">Ver Poema</a>
+              <a href="vista_detallada.html" class="btn btn-primary">Ver Poema</a>
               
              </div>
              </div>
@@ -87,7 +72,7 @@
               <h5 class="card-title">Promedio:</h5>
               <h5 class="card-title">Puntaje:</h5>
                 
-                <a href="#" class="btn btn-primary">Ver Poema</a>
+                <a href="vista_detallada.html" class="btn btn-primary">Ver Poema</a>
                </div>
                </div>
          </div>
@@ -99,7 +84,7 @@
               <h5 class="card-title">Poema:</h5>
               <h5 class="card-title">Promedio:</h5>
               <h5 class="card-title">Puntaje:</h5>
-                <a href="#" class="btn btn-primary">Ver Poema</a>
+                <a href="vista_detallada.html" class="btn btn-primary">Ver Poema</a>
                 <div class="d-grid gap-2">
                     
                </div>
@@ -115,7 +100,7 @@
               <h5 class="card-title">Poema:</h5>
               <h5 class="card-title">Promedio:</h5>
               <h5 class="card-title">Puntaje:</h5>
-                <a href="#" class="btn btn-primary">Ver Poema</a>
+                <a href="vista_detallada.html" class="btn btn-primary">Ver Poema</a>
                 <div class="d-grid gap-2">
                     
                </div>
