--- a/frontend/main/templates/register.html
+++ b/frontend/main/templates/register.html
@@ -43,8 +43,8 @@
         <div class="d-flex justify-content-center mt-4">
             <div class="col-md-4 bg-light p-4 rounded ">
                 
-                  <form class="pt-3" action="{{ url_for('main.login') }}" method="POST">
-                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                  <form class="pt-3" action="{{ url_for('app.register') }}" method="POST">
+                    
                     <div class="mb-3">
                       
                     </div>
