--- a/frontend/main/templates/lista_poemas.html
+++ b/frontend/main/templates/lista_poemas.html
@@ -1,34 +1,9 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends "base.html" %}
+
+  {% block content %}
+	<body class="bg-info">
+
     <title>lista poemas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  </head>
-  <body class="">
-
-	<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-		<div class="container">
-		  <a class="navbar-brand text-dark" href="vista_principal.html">APP POEMAS</a>
-		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		  </button>
-
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
-			<div class="row">
-				<div class="col-md-15">
-					
-				</div>
-			</div>
-		  </div>
-		</div>
-	</nav>
-
-  
-
-        
 
         <div class="container">
           <h3>Poemas</h3>
@@ -98,7 +73,5 @@
 			</ul>
 		</div>
 	</nav>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-  </body>
-</html>
+	{% endblock %}
