--- a/frontend/main/templates/base.html
+++ b/frontend/main/templates/base.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <i class="bi bi-journal-arrow-up"></i>
-        <a href="" class="navbar-brand">APP POEMAS</a>
+        <a href="{{url_for('app.index')}}" class="navbar-brand">APP POEMAS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,13 +33,16 @@
 
 
             <li class="nav-item">
-              <a class="nav-link" href="login.html">login</a>
+              <a class="nav-link" href="{{url_for('app.login')}}">login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="mi_perfil.html">Mi perfil</a>
+              <a class="nav-link" href="{{url_for('app.mi_perfil')}}">Mi perfil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="lista_poemas.html">Ver mas</a>
+              <a class="nav-link" href="{{url_for('app.lista_poemas')}}">Ver mas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{url_for('app.register')}}">Register</a>
             </li>
 
           </ul>
