--- a/frontend/main/templates/login.html
+++ b/frontend/main/templates/login.html
@@ -10,22 +10,22 @@
         <div class="d-flex justify-content-center mt-4">
             <div class="col-md-4 bg-light p-4 rounded ">
                 
-                  <form class="pt-3" action="{{ url_for('app.login') }}" method="POST">
+                  <form action="{{ url_for('app.login') }}" method="POST">
                     
                     <div class="mb-3">
                       
                     </div>
        
       
-                    <form>
+                    
                         <div class="mb-3">
                           <label for="exampleInputEmail1" class="form-label">Email address</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                          <input type="email" name="correo" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                           
                         </div>
                         <div class="mb-3">
                           <label for="exampleInputPassword1" class="form-label">Password</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1">
+                          <input type="password" name="contraseña" class="form-control" id="exampleInputPassword1">
                         </div>
                         <div class="mb-3 form-check">
                           <input type="checkbox" class="form-check-input" id="exampleCheck1">
