--- a/frontend/main/templates/mi_perfil.html
+++ b/frontend/main/templates/mi_perfil.html
@@ -21,36 +21,21 @@
                         <div class="mb-3">
                            
                            <label for="name" class="form-label">Nombre</label>
-                           <input type="name" class="form-control" >
+                           <input type="name" class="form-control" value="{{usuario.nombre}}" disabled>
 
 
-                        <div class="mb-3">
-                          <label for="exampleInputEmail1" class="form-label">Email address</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      
                           
                 
                           <div class="mb-3">
                            
-                            <label for="Poemas" class="form-label">Poemas</label>
-                            <input type="Poemas" class="form-control" >
+                            <label for="Poemas" class="form-label">Poemas </label>
+                            <input type="Poemas" class="form-control" value="{{usuario.num_poemas}}" disabled >
 
-                        <div class="mb-3">
-                           
-                           <label for="name" class="form-label">Calificaciones</label>
-                           <input type="name" class="form-control" >
-
-                        </div>
-                        <div class="mb-3">
-                          <label for="exampleInputPassword1" class="form-label">Password</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
+                       
 
 
-                           <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                          </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                    
 
                       </form>
     
