--- a/frontend/main/templates/base.html
+++ b/frontend/main/templates/base.html
@@ -39,11 +39,13 @@
               <a class="nav-link" href="{{url_for('app.mi_perfil')}}">Mi perfil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('app.lista_poemas')}}">Ver mas</a>
+              <a class="nav-link" href="{{url_for('app.crear_poema')}}">Crear Poema</a>
             </li>
+            
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('app.register')}}">Register</a>
+              <a class="nav-link" href="{{url_for('app.login')}}">Logout</a>
             </li>
+            
 
           </ul>
         </div>
