--- a/frontend/main/templates/crear_poema.html
+++ b/frontend/main/templates/crear_poema.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 <div class="container">  
-    <form method="POST" action="/poem/create">
+    <form action="{{ url_for('app.crear_poema') }}" method="POST">
         <div class="form-group">
             <label for="texto">Title</label>
-            <input type="text" name="title" class="form-control">
+            <input type="text" name="titulo" class="form-control">
         </div>
         <div class="form-group">
             <label for="area">Body</label>
-            <textarea name="body" rows="10" cols="40"  class="form-control" id="area"></textarea>
+            <textarea name="cuerpo" rows="10" cols="40"  class="form-control" id="area"></textarea>
         </div>
         <div class="container justify-content-center mt-3">
             <div class="row">
