--- a/frontend/main/templates/vista_principal.html
+++ b/frontend/main/templates/vista_principal.html
@@ -18,9 +18,10 @@
             <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="...">
             <div class="d-grid gap-2">
               <h5 class="card-title">Nombre: {{poema.titulo}}</h5>
-            
-              <a href="vista_detallada.html" class="btn btn-primary">Ver Poema</a>
+              <h5 class="card-title">Cuerpo: {{poema.cuerpo}}</h5>
               
+              <a href="{{ url_for('app.editar_poema',id=poema.id) }}" class="btn btn-primary">Editar Poema</a>
+              <a href="{{ url_for('app.eliminar_poema',id=poema.id) }}" class="btn btn-primary">Borrar Poema</a>
              </div>
              </div>
           </div>
